--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,5 +1,43 @@
-.home {
-  background-color: tomato;
-  padding: 20px;
-  height: 100vh;
+.layoutHome {
+  height: 100%;
+  width: 100%;
+  display: flex;
+
+  gap: 5px;
+  flex-wrap: wrap;
+  padding: 1em;
+}
+
+.content1 {
+  display: flex;
+
+  height: 80%;
+  width: 55%;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.content2 {
+  height: 80%;
+  width: 39%;
+}
+.content3 {
+  height: 20%;
+  width: 94.5%;
+}
+
+@media only screen and (max-width: 760px) {
+  .content1 {
+    height: auto;
+    width: 100%;
+  }
+  .content2 {
+    height: auto;
+    width: 100%;
+  }
+  .content3 {
+    height: auto;
+    width: 100%;
+  }
 }
