--- a/src/css/navLink.css
+++ b/src/css/navLink.css
@@ -1,10 +1,42 @@
-.navLinks {
-  background-color: yellowgreen;
+.nav {
+  display: flex;
+  justify-content: space-between;
+
+  align-items: center;
+
+  padding: 1.5em 4em;
 }
 
-ul {
-  list-style-type: none;
+.navLeft,
+.navRight {
   display: flex;
-  gap: 2em;
-  padding: 2em;
+  justify-content: space-between;
+  gap: 0.9em;
 }
+li {
+  list-style-type: none;
+  text-decoration: none;
+}
+a {
+  text-decoration: none;
+}
+/* .nav {
+  justify-content: center;
+  align-items: center;
+  padding: 30px 170px 30px 170px;
+}
+
+.navLinks {
+  background-color: rgb(207, 195, 20);
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.logo {
+  float: left;
+  background-color: brown;
+  font-size: 25px;
+  font-weight: 900;
+  margin: -8;
+} */
